[gd_scene load_steps=3 format=3 uid="uid://ship_status_panel"]

[ext_resource type="Script" path="res://scripts/designer/ShipStatusPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_status"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.886275, 0.886275, 1)

[node name="ShipStatusPanel" type="Panel"]
custom_minimum_size = Vector2(300, 200)
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_status")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Content" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 24
text = "STATUS"
horizontal_alignment = 1

[node name="Separator1" type="Control" parent="VBoxContainer/MarginContainer/Content"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="BridgeStatusRow" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="StatusLine" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Content/BridgeStatusRow"]
layout_mode = 2

[node name="BridgeIconLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/BridgeStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "✗"

[node name="BridgeTextLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/BridgeStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = " Bridge: Missing"

[node name="BudgetStatusRow" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="StatusLine" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Content/BudgetStatusRow"]
layout_mode = 2

[node name="BudgetIconLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/BudgetStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "✗"

[node name="BudgetTextLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/BudgetStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = " Budget: Over Budget"

[node name="BudgetDetailLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/BudgetStatusRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 14
text = "  0 / 30"

[node name="PowerStatusRow" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="StatusLine" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Content/PowerStatusRow"]
layout_mode = 2

[node name="PowerIconLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/PowerStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "✓"

[node name="PowerTextLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/PowerStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = " Power: All Rooms Powered"

[node name="PowerDetailLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/PowerStatusRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 14
text = "  All powered!"

[node name="SynergyStatusRow" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="StatusLine" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Content/SynergyStatusRow"]
layout_mode = 2

[node name="SynergyIconLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/SynergyStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "⚡"

[node name="SynergyTextLabel" type="Label" parent="VBoxContainer/MarginContainer/Content/SynergyStatusRow/StatusLine"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = " Synergies: 0 active"
